infra/k8s/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dockerize-xapp-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dockerize-xapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dockerize-xapp-nginx-service
                port:
                  number: 80
